# Hand-Rehab

./: .env.example  .gitattributes  .gitignore  IMPLEMENTATION_TODO.md  README.md  docker-compose.yml
applications/backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
applications/backend/alembic/: env.py
applications/backend/alembic/versions/: 20260530_0001_initial_schema.py  20260530_0002_session_mqtt_flow.py  20260530_0003_split_game_batches_and_active_session.py  20260602_0004_benchmarks.py  20260602_0004_gameplay_metrics.py  20260602_0005_benchmark_cancelled_status.py  20260602_0006_gameplay_metrics.py  20260602_0007_session_time_modes.py
applications/backend/app/: __init__.py  main.py
applications/backend/app/api/v1/: benchmarks.py  devices.py  game_sessions.py  ingest.py  metrics.py  router.py  users.py
applications/backend/app/core/: config.py
applications/backend/app/db/: base.py  session.py
applications/backend/app/models/: __init__.py  domain.py
applications/backend/app/repositories/: __init__.py
applications/backend/app/schemas/: benchmarks.py  common.py  devices.py  ingest.py  metrics.py  sessions.py  users.py
applications/backend/app/services/: benchmarks.py  ingest.py  metrics.py  mqtt.py  notifications.py
applications/backend/tests/: conftest.py  test_api.py
applications/frontend/: .env.example  index.html  package-lock.json  package.json  (+1 more)
dev-docs/: prd_inicial_jogo_ritmo_reabilitacao_maos.md
docs/: Hand-Rehab_MNR2025.docx  api.md  architecture.md  buffering-analysis.md  mqtt-topics.md
entregas/: README.md
(+49 files in other folders)
